fix(shop): Path B 환불 시 입금 INCOME 수리 후 EXPENSE 쌍 보장
PAID 시 ensureConsultationDepositIncome으로 입금 INCOME을 보장하고,
환불 시 INCOME이 없으면 SSOT로 수리한 뒤 동일 장부 EXPENSE를 생성한다.

Co-authored-by: beta0629 <beta0629@users.noreply.github.com>